<resources>
      <string name="app_name">HEMS</string>
      <string name="update">Refresh</string>
      <string name="updating">Data Refreshing</string>
      <string name="default_title_no_item_found">No items found.</string>
      <string name="todo" translatable="false">TODO</string>
      <string name="device_name">Device</string>
      <string name="device_image" translatable="false">Device image</string>
      <string name="ip_address_string">IP Address: Unknown</string>
      <string name="operation_mode_string">Operation Mode: Unknown</string>
      <string name="operation_status_string">Operation Status: Unknown</string>
      <string name="instantaneous_string">Instantaneous: Unknown</string>
      <string name="current_electric_string">Current Electric: Unknown</string>
      <string name="current_percentage_string">Current Percent: Unknown</string>
      <string name="on" translatable="false">ON</string>
      <string name="off" translatable="false">OFF</string>
      <string name="time">Time</string>
      <string name="state">Status</string>
      <string name="instantaneous">Instantaneous</string>
      <string name="configure_txt">Configure</string>
      <string name="startTime">Start Time</string>
      <string name="endTime">End Time</string>
      <string name="cannot_start_controller">Controller can not start</string>
      <string name="number_devices_found">" devices found."</string>
      <string name="select_btn">Select</string>
      <string name="cancel_btn">Cancel</string>
      <string name="device_disconnected">Device disconnected</string>
      <string name="unknown">Unknown</string>
      <string name="reenter_time">Please re-enter time.</string>
      <string name="reenter_instantaneous_value">Please re-enter instantaneous</string>
      <string name="set_epc_success">Set EPC Success</string>
      <string name="set_epc_fail">Set EPC Failed</string>
      <string name="data_out_of_range">Data is out of range</string>
      <string name="data_invalid">Data Invalid</string>
      <string name="battery_name">BATTERY</string>
      <string name="ev_name">EV</string>
      <string name="light_name">LIGHT</string>
      <string name="solar_name">SOLAR</string>
      <string name="unknown_name">UNKNOWN</string>
      <string name="operation_name_other">Other</string>
      <string name="operation_name_rapid_charging">Rapid Charging</string>
      <string name="operation_name_charging">Charging</string>
      <string name="operation_name_discharging">Discharging</string>
      <string name="operation_name_standby">Standby</string>
      <string name="operation_name_test">Test</string>
      <string name="operation_name_automatic">Automatic</string>
      <string name="operation_name_idle">Idle</string>
      <string name="operation_name_restart">Restart</string>
</resources>
