<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"      xmlns:app="http://schemas.android.com/apk/res-auto"      android:layout_width="match_parent"      android:layout_height="140dp"      android:layout_margin="@dimen/line_thick"      android:background="@color/trang_nen"      android:clickable="true"      android:focusable="true"      android:orientation="horizontal"      android:padding="10dp"      android:weightSum="3">      <ImageView            android:id="@+id/device_image"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:contentDescription="@string/device_image"            android:padding="5dp"            android:scaleType="centerInside"            app:srcCompat="@drawable/logo" />      <!--            android:background="@color/hongNhat"-->      <LinearLayout            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_marginStart="8dp"            android:layout_marginEnd="0dp"            android:layout_weight="2"            android:orientation="vertical"            android:padding="5dp"            android:weightSum="13">            <TextView                  android:id="@+id/name_txt"                  android:layout_width="match_parent"                  android:layout_height="0dp"                  android:layout_weight="3"                  android:paddingBottom="3dp"                  android:text="@string/device_name"                  android:textColor="@color/da_cam_dam"                  android:textSize="16sp"                  android:textStyle="bold"                  app:fontFamily="sans-serif-condensed-medium" />            <TextView                  android:id="@+id/ipaddress_txt"                  android:layout_width="match_parent"                  android:layout_height="0dp"                  android:layout_weight="2"                  android:paddingStart="20dp"                  android:paddingEnd="0dp"                  android:text="@string/ip_address_string"                  android:textColor="@color/nau"                  android:textSize="12sp" />            <TextView                  android:id="@+id/operation_status_txt"                  android:layout_width="match_parent"                  android:layout_height="0dp"                  android:layout_weight="2"                  android:paddingStart="20dp"                  android:paddingEnd="0dp"                  android:text="@string/operation_status_string"                  android:textColor="@color/nau"                  android:textSize="12sp" />            <TextView                  android:id="@+id/operation_mode_txt"                  android:layout_width="match_parent"                  android:layout_height="0dp"                  android:layout_weight="2"                  android:paddingStart="20dp"                  android:paddingEnd="0dp"                  android:text="@string/operation_mode_string"                  android:textColor="@color/nau"                  android:textSize="12sp"                  android:visibility="invisible" />            <TextView                  android:id="@+id/instantaneous_txt"                  android:layout_width="match_parent"                  android:layout_height="0dp"                  android:layout_weight="2"                  android:paddingStart="20dp"                  android:paddingEnd="0dp"                  android:text="@string/instantaneous_string"                  android:textColor="@color/nau"                  android:textSize="12sp"                  android:visibility="invisible" />            <TextView                  android:id="@+id/current_txt"                  android:layout_width="match_parent"                  android:layout_height="0dp"                  android:layout_weight="2"                  android:paddingStart="20dp"                  android:paddingEnd="0dp"                  android:text="@string/current_electric_string"                  android:textColor="@color/nau"                  android:textSize="12sp"                  android:visibility="invisible" />      </LinearLayout></LinearLayout>