<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"      xmlns:app="http://schemas.android.com/apk/res-auto"      xmlns:tools="http://schemas.android.com/tools"      android:layout_width="match_parent"      android:layout_height="match_parent"      android:background="@color/hong_nhat"      android:orientation="vertical"      android:weightSum="10"      tools:context=".DeviceActivity">      <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:background="@color/vang_nhat"            android:gravity="center_vertical"            android:orientation="horizontal"            android:padding="6dp"            android:weightSum="8">            <Button                  android:id="@+id/back_button"                  android:layout_width="0dp"                  android:layout_height="40dp"                  android:layout_weight="1"                  android:background="@drawable/back_button"                  android:onClick="backPreviousActivity" />            <TextView                  android:id="@+id/name_bar_txt"                  android:layout_width="0dp"                  android:layout_height="wrap_content"                  android:layout_marginStart="10dp"                  android:layout_weight="7"                  android:gravity="center_vertical"                  android:text="@string/device_name"                  android:textColor="@color/mau_chu_title"                  android:textSize="@dimen/title_text_size"                  android:textStyle="bold"                  app:fontFamily="sans-serif-condensed-medium" />      </LinearLayout>      <androidx.swiperefreshlayout.widget.SwipeRefreshLayout            android:id="@+id/pullToRefresh"            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_marginStart="10dp"            android:layout_marginTop="10dp"            android:layout_marginEnd="10dp"            android:layout_marginBottom="@dimen/tab"            android:layout_weight="3"            android:background="@drawable/my_device_shape">            <LinearLayout                  android:layout_width="match_parent"                  android:layout_height="match_parent"                  android:orientation="horizontal"                  android:padding="12dp">                  <ImageView                        android:id="@+id/device_img2"                        android:layout_width="0dp"                        android:layout_height="wrap_content"                        android:layout_weight="1"                        android:contentDescription="@string/todo"                        android:padding="@dimen/line_thick"                        android:scaleType="centerInside"                        app:srcCompat="@drawable/logo" />                  <LinearLayout                        android:layout_width="0dp"                        android:layout_height="match_parent"                        android:layout_marginStart="@dimen/line_thick"                        android:layout_marginTop="@dimen/line_thick"                        android:layout_weight="2"                        android:orientation="vertical"                        android:padding="@dimen/line_thick"                        android:weightSum="15">                        <TextView                              android:id="@+id/name2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="3"                              android:paddingBottom="3dp"                              android:text="@string/device_name"                              android:textColor="@color/da_cam_dam"                              android:textSize="16sp"                              android:textStyle="bold"                              app:fontFamily="sans-serif-condensed-medium" />                        <TextView                              android:id="@+id/ip_address2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="2"                              android:paddingStart="20dp"                              android:paddingEnd="0dp"                              android:text="@string/ip_address_string"                              android:textColor="@color/nau"                              android:textSize="12sp" />                        <TextView                              android:id="@+id/operation_status2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="2"                              android:paddingStart="20dp"                              android:paddingEnd="0dp"                              android:text="@string/operation_status_string"                              android:textColor="@color/nau"                              android:textSize="12sp" />                        <TextView                              android:id="@+id/operation_mode2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="2"                              android:paddingStart="20dp"                              android:paddingEnd="0dp"                              android:text="@string/operation_mode_string"                              android:textColor="@color/nau"                              android:textSize="12sp"                              android:visibility="invisible"                              tools:visibility="visible" />                        <TextView                              android:id="@+id/instantaneous2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="2"                              android:paddingStart="20dp"                              android:paddingEnd="0dp"                              android:text="@string/instantaneous_string"                              android:textColor="@color/nau"                              android:textSize="12sp"                              android:visibility="invisible"                              tools:visibility="visible" />                        <TextView                              android:id="@+id/current2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="2"                              android:paddingStart="20dp"                              android:paddingEnd="0dp"                              android:text="@string/current_electric_string"                              android:textColor="@color/nau"                              android:textSize="12sp"                              android:visibility="invisible"                              tools:visibility="visible" />                        <TextView                              android:id="@+id/current_percent2_txt"                              android:layout_width="match_parent"                              android:layout_height="0dp"                              android:layout_weight="2"                              android:paddingStart="20dp"                              android:paddingEnd="0dp"                              android:text="@string/current_percentage_string"                              android:textColor="@color/nau"                              android:textSize="12sp"                              android:visibility="invisible"                              tools:visibility="visible" />                  </LinearLayout>            </LinearLayout>      </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>      <TableRow            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:gravity="center"            android:paddingBottom="@dimen/tab">            <Button                  android:id="@+id/on_btn"                  style="?android:attr/buttonBarStyle"                  android:layout_width="80dp"                  android:layout_height="35dp"                  android:background="@drawable/my_button"                  android:onClick="onClickButtonOnOff"                  android:text="@string/on"                  android:textStyle="bold" />            <Button                  android:id="@+id/off_btn"                  style="?android:attr/buttonBarStyle"                  android:layout_width="80dp"                  android:layout_height="35dp"                  android:layout_marginStart="50dp"                  android:background="@drawable/my_button"                  android:onClick="onClickButtonOnOff"                  android:text="@string/off"                  android:textStyle="bold" />      </TableRow>      <TableLayout            android:id="@+id/config_layout"            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_marginLeft="@dimen/tab"            android:layout_marginRight="@dimen/tab"            android:layout_marginBottom="@dimen/tab"            android:layout_weight="5"            android:visibility="invisible"            android:weightSum="8"            tools:visibility="visible">            <TextView                  android:id="@+id/textView8"                  android:layout_width="match_parent"                  android:layout_height="15dp"                  android:layout_weight="1"                  android:paddingStart="@dimen/tab"                  android:paddingEnd="0dp"                  android:text="@string/time"                  android:textColor="#000000" />            <TableRow                  android:layout_width="match_parent"                  android:layout_height="wrap_content"                  android:layout_marginLeft="@dimen/tab"                  android:layout_marginRight="@dimen/tab"                  android:layout_weight="1"                  android:weightSum="2">                  <EditText                        android:id="@+id/start_time_txt"                        android:layout_width="0dp"                        android:layout_height="40dp"                        android:layout_marginTop="@dimen/line_thick"                        android:layout_marginEnd="@dimen/tab"                        android:layout_weight="1"                        android:ems="10"                        android:focusable="false"                        android:importantForAutofill="no"                        android:inputType="none"                        android:onClick="selectTime"                        android:text="@string/startTime"                        android:textSize="12sp"                        tools:ignore="LabelFor" />                  <EditText                        android:id="@+id/end_time_txt"                        android:layout_width="0dp"                        android:layout_height="40dp"                        android:layout_marginTop="@dimen/line_thick"                        android:layout_weight="1"                        android:ems="10"                        android:focusable="false"                        android:importantForAutofill="no"                        android:inputType="none"                        android:onClick="selectTime"                        android:text="@string/endTime"                        android:textSize="12sp"                        tools:ignore="LabelFor"                        tools:targetApi="o" />            </TableRow>            <TextView                  android:id="@+id/mode_schedule_text"                  android:layout_width="match_parent"                  android:layout_height="15dp"                  android:layout_weight="1"                  android:paddingStart="@dimen/tab"                  android:paddingEnd="0dp"                  android:text="@string/state"                  android:textColor="#000000" />            <Spinner                  android:id="@+id/spinner"                  android:layout_width="match_parent"                  android:layout_height="40dp"                  android:layout_marginStart="60dp"                  android:layout_marginTop="@dimen/line_thick"                  android:layout_marginEnd="40dp"                  android:layout_weight="1"                  android:textSize="12sp" />            <TextView                  android:id="@+id/textView7"                  android:layout_width="match_parent"                  android:layout_height="15dp"                  android:layout_weight="1"                  android:paddingStart="@dimen/tab"                  android:paddingEnd="0dp"                  android:text="@string/instantaneous"                  android:textColor="#000000" />            <EditText                  android:id="@+id/instantaneous_edit_text"                  android:layout_width="match_parent"                  android:layout_height="40dp"                  android:layout_marginStart="@dimen/tab"                  android:layout_marginLeft="@dimen/tab"                  android:layout_marginTop="@dimen/line_thick"                  android:layout_marginEnd="@dimen/tab"                  android:layout_marginRight="@dimen/tab"                  android:layout_weight="1"                  android:ems="10"                  android:importantForAutofill="no"                  android:inputType="number"                  android:maxLength="9"                  android:textSize="12sp"                  tools:ignore="LabelFor"                  tools:targetApi="o" />            <Button                  android:id="@+id/config_btn"                  android:layout_width="0dp"                  android:layout_height="35dp"                  android:layout_gravity="center_horizontal"                  android:layout_marginHorizontal="@dimen/tab"                  android:layout_marginTop="@dimen/tab"                  android:layout_weight="1"                  android:background="@drawable/my_button"                  android:onClick="onClickButtonConfig"                  android:text="@string/configure_txt"                  android:textStyle="bold"                  tools:targetApi="o" />      </TableLayout></LinearLayout>