<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/xanh_nhat"
      android:orientation="vertical"
      android:weightSum="9"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:context=".MainActivity">

      <TextView
            android:id="@+id/txt_item_count"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/vang_nhat"
            android:gravity="center_vertical"
            android:paddingStart="25dp"
            android:paddingTop="13dp"
            android:paddingEnd="25dp"
            android:text="@string/default_title_no_item_found"
            android:textColor="@color/mau_chu_title"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintTop_toTopOf="parent" />

      <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <ImageView
                  android:id="@+id/image_view"
                  android:layout_width="280dp"
                  android:layout_height="280dp"
                  android:contentDescription="@string/todo"
                  android:visibility="visible"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:srcCompat="@drawable/sad_face" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                  android:id="@+id/refresh"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingTop="@dimen/line_thick"
                  android:paddingBottom="@dimen/line_thick"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

                  <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/xanh_dam">

            <Button
                  android:id="@+id/btn_update"
                  android:layout_width="wrap_content"
                  android:layout_height="42dp"
                  android:background="@drawable/my_button"
                  android:gravity="center"
                  android:onClick="onUpdatingFromView"
                  android:padding="7dp"
                  android:text="@string/update"
                  android:textStyle="bold"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

